# pixelmodels

./: .gitignore  README.md  TODOs.md  development_guide.md  pyproject.toml
pixelmodels/: __init__.py  common.py  fume.py  hyfr.py  hyfu.py  nofu.py  train_common.py  train_fume.py  train_hyfr.py  train_hyfu.py  train_nofu.py
pixelmodels/models/fume/: crossval_class.csv  crossval_rating_dist.csv  crossval_regression.csv  info.json
pixelmodels/models/hyfr/: crossval_class.csv  crossval_rating_dist.csv  crossval_regression.csv  info.json
pixelmodels/models/hyfu/: crossval_class.csv  crossval_rating_dist.csv  crossval_regression.csv  info.json  model_class.npz
pixelmodels/models/nofu/: crossval_class.csv  crossval_rating_dist.csv  crossval_regression.csv  features.csv  info.json  model_class.npz
