[build-system]
requires = [ "poetry>=1.0.3",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pixelmodels"
version = "0.1.15"
description = "Pixel based video quality models"
readme = "README.md"
authors = [ "Steve Göring <steve.goering@tu-ilmenau.de>", "Ramachandra Rao Rakesh Rao <Rakesh-Rao.Ramachandra-Rao@tu-ilmenau.de>",]
license = "GPL 3"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
opencv-python = "4.5.5.64"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
nofu = "pixelmodels.nofu:main"
train_nofu = "pixelmodels.train_nofu:main"
hyfu = "pixelmodels.hyfu:main"
train_hyfu = "pixelmodels.train_hyfu:main"
fume = "pixelmodels.fume:main"
train_fume = "pixelmodels.train_fume:main"
hyfr = "pixelmodels.hyfr:main"
train_hyfr = "pixelmodels.train_hyfr:main"

[tool.poetry.dependencies.quat]
git = "https://github.com/Telecommunication-Telemedia-Assessment/quat.git"
tag = "v0.1.8"
